--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "pm2 start process.json && pm2 logs danbot",
     "inspect": "npx nodemon --inspect index.js",
+    "proxy": "ngrok http --domain=lionfish-guided-jointly.ngrok-free.app 3041",
     "server": "node index.js",
     "test": "jest"
   },
