--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "pm2 start process.json && pm2 logs danbot",
+    "start": "pm2 start process.json && pm2 logs leapbot",
     "inspect": "npx nodemon --inspect index.js",
-    "proxy": "ngrok http --domain=lionfish-guided-jointly.ngrok-free.app 3041",
+    "proxy": "ngrok http --region=us --hostname=leapbot.ngrok.io 3041",
     "server": "node index.js",
     "test": "jest"
   },
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.11.0",
+    "axios": "^1.6.8",
     "dotenv": "^16.0.0",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "node-cache": "^5.1.2"
   }
 }
